--- a/aste/templates/aste/home.html
+++ b/aste/templates/aste/home.html
@@ -8,19 +8,7 @@
 <div class="row">
     <!-- Spiegazione: ListView ci fornisce la lista di aste nella variabile 'aste_list' -->
     {% for asta in aste_list %}
-        <div class="col-md-4">
-            <div class="card mb-4">
-                <img src="{{ asta.immagine.url }}" class="card-img-top" alt="{{ asta.titolo }}">
-                <div class="card-body">
-                    <h5 class="card-title">{{ asta.titolo }}</h5>
-                    <p class="card-text">{{ asta.descrizione|truncatewords:20 }}</p>
-                    <!-- Spiegazione: Usiamo il tag `url` per creare un link dinamico.
-                         'aste:dettaglio_asta' è il nome che daremo al nostro URL tra poco.
-                         `asta.pk` è la primary key (l'ID) dell'oggetto asta corrente. -->
-                    <a href="{% url 'aste:dettaglio_asta' asta.pk %}" class="btn btn-primary">Vedi Dettagli</a>
-                </div>
-            </div>
-        </div>
+        {% include 'aste/_asta_card.html' %}
     {% empty %}
         <p class="col">Al momento non ci sono aste attive.</p>
     {% endfor %}
